samples/_failures_safe/1761638540_6fb554_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59962fb1.c: In function ‘main’:
./samples/SAFE/__tmp_59962fb1.c:154:94: error: expected ‘)’ at end of input
  154 |     struct compression_result result = perform_compression(comp_type, input_buffer, input_len
      |                                                           ~                                  ^
      |                                                                                              )
./samples/SAFE/__tmp_59962fb1.c:154:40: error: too few arguments to function ‘perform_compression’
  154 |     struct compression_result result = perform_compression(comp_type, input_buffer, input_len
      |                                        ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_59962fb1.c:65:27: note: declared here
   65 | struct compression_result perform_compression(enum compression_type type, const uint8_t *input, size_t input_len, uint8_t *output, size_t output_len) {
      |                           ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_59962fb1.c:154:12: error: expected declaration or statement at end of input
  154 |     struct compression_result result = perform_compression(comp_type, input_buffer, input_len
      |            ^~~~~~~~~~~~~~~~~~
